--- a/app/app.css
+++ b/app/app.css
@@ -6,6 +6,7 @@ html, body, .ng-scope, .full-area {
 }
 
 .img-container {
+    width: 100%;
     max-height: 100%;
     overflow: hidden;
     position: absolute;
@@ -15,7 +16,7 @@ html, body, .ng-scope, .full-area {
 }
 
 .back-img {
-    max-width: 100%;
+    width: 100%;
 }
 
 body {
