--- a/app/app.css
+++ b/app/app.css
@@ -5,6 +5,16 @@ html, body, .ng-scope, .full-area {
     margin: 0;
 }
 
+.player-count {
+    position: fixed;
+    text-align: center;
+    top: 0;
+    right: 0;
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+}
+
 .img-container {
     width: 100%;
     max-height: 100%;
@@ -31,6 +41,7 @@ form.text-input {
     flex-flow: row wrap;
     width: 100%;
     font-size: 0px;
+    min-height: min-content;
 }
 
 form > input {
@@ -55,19 +66,26 @@ form > label {
     position: absolute;
     z-index: 0;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     background-color: #333;
     justify-content: space-between;
     height: 100%;
     width: 100%;
     max-width: 800px;
     max-height: 600px;
+    overflow: hidden;
 }
 
 .full-area {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.game-text {
+    width: 100%;
+    overflow-y: scroll;
+    padding-right: 50px;
 }
 
 p {
