--- a/app/app.css
+++ b/app/app.css
@@ -99,9 +99,53 @@ form > label {
 .side-bar {
     height: 500px;
     width: 200px;
+    animation: side-bar-reveal 0.5s 1;
     padding: 5px;
     background-color: #373737;
     z-index: 1;
+    float: right;
+}
+
+.player-name {
+    position: relative;
+    white-space: pre;
+    animation: name-fade 1s 1;
+}
+
+@keyframes side-bar-reveal {
+    0% {
+        width: 0px;
+    }
+    100% {
+        width: 200px;
+    }
+}
+
+@keyframes name-fade {
+    0% {
+        color: rgba(255, 255, 255, 0);
+        top: -50px;
+    }
+    50% {
+        color: rgba(255, 255, 255, 0);
+        top: -50px;
+    }
+    100% {
+        color: rgba(255, 255, 255, 1);
+        top: 0px;
+    }
+}
+
+.side-bar-container {
+    height: 500px;
+    width: 200px;
+}
+
+.side-hidden {
+    height: 500px;
+    width: 200px;
+    padding: 5px;
+    visibility: hidden;
 }
 
 .full-area {
