Removed comments. Changed value of room in state. Changed where roomContents is updated in preparation for updating entities live.

--- a/app/app.css
+++ b/app/app.css
@@ -107,8 +107,9 @@ form > label {
 
 .player-name {
     position: relative;
-    white-space: pre;
     animation: text-reveal 1s 1;
+    height: auto;
+    width: auto;
 }
 
 @keyframes side-bar-reveal {
